--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   printing: ^5.14.2
   in_app_purchase: ^3.2.3
   syncfusion_flutter_pdf: ^29.2.11
+  flutter_gen: ^5.12.0
 
 dev_dependencies:
   flutter_test:
@@ -34,3 +35,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
