--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   intl: ^0.20.2
   flutter_riverpod: ^2.6.1
   go_router: ^14.8.1
-  drift: ^2.28.1
+  drift: 2.28.1
   sqlite3_flutter_libs: ^0.5.39
   path_provider: ^2.1.5
   path: ^1.9.1
@@ -24,13 +24,12 @@ dependencies:
   printing: ^5.14.2
   in_app_purchase: ^3.2.3
   syncfusion_flutter_pdf: ^29.2.11
-  flutter_gen: ^5.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  drift_dev: ^2.28.1
+  drift_dev: 2.28.1
   build_runner: ^2.4.15
 
 flutter:
